# agentic-codebase-navigator

./: .coderabbit.yaml  .coverage  .env.example  .envrc  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .verify_fixes.sh  .yamllint.yaml  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES_SUMMARY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  check_ruff.py  check_ruff_errors.py  config.toml  dprint.json  inline_ruff_check.py  justfile  mise.toml  pyproject.toml  pyrightconfig.json  run_ruff_check.py  show_ruff_errors.sh  verify_fixes.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  api.md  architecture.md  configuration.md  legacy_mapping.md  llm_providers.md  logging.md  migration.md  ports.md  troubleshooting.md
docs/adr/: 0001-hexagonal-modular-monolith.md  0002-optional-provider-dependencies.md  0003-jsonl-log-schema-versioning.md
docs/contributing/: commit-conventions.md
docs/environments/: execution-environments.md
docs/internals/: logging.md  ports.md  protocol.md  state-machine.md
docs/performance-issues/: README.md  issue-01-message-history-growth.md  issue-02-sequential-code-execution.md  issue-03-recursive-serialization.md  issue-04-json-dumps-length.md  issue-05-global-execution-lock.md  issue-06-regex-dotall-large-text.md
docs/providers/: llm-providers.md
docs/relay/: composition.md  overview.md  states.md  validation.md
examples/: __init__.py  relay_conditional_routing.py  relay_parallel_join.py  relay_research_pipeline.py
src/rlm/: __init__.py  cli.py
tests/: __init__.py  conftest.py  fakes_ports.py  live_llm.py  test_anthropic_adapter_mocked.py  test_api_facade_orchestrator_wiring.py  test_api_facade_rlm.py  test_api_factory.py  test_application_config_dataclasses.py  test_application_legacy_orchestrator_service.py  test_architecture_layering.py  test_azure_openai_adapter_mocked.py  test_boundary_broker_routes_provider_adapters_by_model.py  test_boundary_di_from_config.py  test_boundary_facade_legacy_localrepl.py  test_boundary_localrepl_llm_query_through_tcp_broker.py  test_boundary_multi_backend_facade.py  test_boundary_orchestrator_usage_summary_propagation.py  test_boundary_orchestrator_vs_legacy.py  test_boundary_timeouts_and_correlation_id_visible_end_to_end.py  test_boundary_usage_across_api_broker_env_logger.py  test_broker_batched_cancellation.py  test_broker_tcp_invalid_requests.py  test_broker_tcp_usage_summary.py  test_comms_utils_socket_recv.py  test_config_validation_and_registries.py  test_docker_adapter_config_validation.py  test_docker_facade_exec.py  test_docker_facade_llm_query.py  test_docker_facade_llm_query_batched.py  test_docker_proxy_plumbing_adapter.py  test_docker_proxy_plumbing_mocked.py  test_domain_models_serialization.py  test_domain_no_external_imports.py  test_domain_parsing_services.py  test_domain_query_metadata.py  test_domain_rlm_orchestrator.py  test_env_cleanup_hardening.py  test_imports.py  test_integration_context_loading.py  (+23 more)
tests/benchmark/: README.md  __init__.py  bench_utils.py  test_benchmark_smoke.py  test_memory_profiles.py  test_speed_connection_pooling.py  test_speed_orchestrator.py  test_speed_parsing.py  test_speed_serialization.py  test_speed_wire_protocol.py  test_stress_reliability.py  test_tcp_broker_batched_concurrency_stress.py
tests/e2e/: test_boundary_di_from_config.py  test_boundary_facade_legacy_localrepl.py  test_boundary_jsonl_logger_schema_validation.py  test_boundary_multi_backend_facade.py  test_boundary_orchestrator_usage_summary_propagation.py  test_boundary_parallel_completions_broker_isolation.py  test_boundary_timeouts_and_correlation_id_visible_end_to_end.py  test_docker_facade_exec.py  test_docker_facade_llm_query.py  test_docker_facade_llm_query_batched.py  test_e2e_tool_calling.py  test_integration_context_loading.py  test_integration_default_install_runs_with_mock_llm.py  test_integration_docker_env_llm_query.py  test_integration_docker_env_llm_query_batched.py  test_integration_docker_env_llm_query_routes_by_model.py  test_integration_docker_env_state_persistence.py  test_integration_error_propagation.py  test_integration_local_env_llm_query.py  test_integration_local_env_llm_query_batched_concurrency.py  test_integration_multi_backend_config.py  test_relay_composition_e2e.py  test_relay_nested_policy_live.py  test_relay_pipeline_e2e.py
tests/integration/: test_infrastructure_comms_roundtrip_integration.py  test_integration_broker_routes_two_mock_llms_by_model.py  test_integration_docker_logger_jsonl_includes_rlm_calls.py  test_integration_extension_policies.py  test_integration_logger_config_injection.py  test_integration_rlm_tool_calling.py  test_live_provider_smoke.py  test_live_relay_composition.py  test_relay_composition_integration.py  test_relay_nested_handler.py  test_relay_nested_policy_live.py  test_relay_pipeline_integration.py
tests/legacy/: __init__.py  test_boundary_orchestrator_local.py  test_lm_handler_batched_usage.py  test_local_repl.py  test_model_usage_summary_from_dict.py  test_parsing.py  test_types_usage_summary_missing.py
tests/packaging/: test_build_install_import.py
tests/performance/: README.md  __init__.py  perf_utils.py  test_benchmark_smoke.py  test_live_llm_performance.py  test_memory_profiles.py  test_speed_connection_pooling.py  test_speed_orchestrator.py  test_speed_parsing.py  test_speed_serialization.py  test_speed_wire_protocol.py  test_stress_reliability.py  test_tcp_broker_batched_concurrency_stress.py
tests/unit/: test_anthropic_adapter_mocked.py  test_api_error_messages_and_ergonomics.py  test_api_facade_orchestrator_wiring.py  test_api_facade_rlm.py  test_api_factory.py  test_api_registries.py  test_api_rlm_facade.py  test_application_config_validation.py  test_architecture_layering.py  test_azure_openai_adapter_mocked.py  test_domain_parsing.py  (+82 more)
(+144 files in other folders)
